# thank-you_letter_generator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
src/: get_select_result.py  log_settings.py  open_selecter_view.py  read_template.py  replace_latex_template_variable.py
tests/: test_open_selecter_view.py
